[project]
name = "llm-test"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "hajime_watanabe", email = "hajime.watanabe@pol.co.jp" }
]
dependencies = [
    "groq>=0.4.2",
    "pydantic>=2.6.4",
    "instructor>=0.4.8",
    "anthropic>=0.20.0",
    "openai>=1.14.0",
    "pandas>=2.2.1",
]
readme = "README.md"
requires-python = ">= 3.9"

[project.scripts]
hello = "llm_test:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/llm_test"]
